--- a/stylesheets/reports.css
+++ b/stylesheets/reports.css
@@ -107,6 +107,45 @@ section.charts{
         box-shadow: none;
     }
 }
+@media screen and (max-width: 1500px){
+    aside .sidebar{
+        height:260vh;
+    }
+    section.charts{
+        grid-template-columns: 1fr;
+        .chart1, .chart2{
+            width:800px;
+            height: auto;
+        }
+    }
+}
+
+@media screen and (max-width: 980px){
+    aside .sidebar{
+        height:250vh;
+    }
+    section.charts{
+        grid-template-columns: 1fr;
+        .chart1, .chart2{
+            width:600px;
+            height: auto;
+        }
+    }
+}
+
+@media screen and (max-width: 850px){
+    aside .sidebar{
+        height:250vh;
+    }
+    section.charts{
+        grid-template-columns: 1fr;
+        .chart1, .chart2{
+            width:550px;
+            height: auto;
+        }
+    }
+}
+
 @media screen and (max-width: 750px){
     .container{
         width: 100%;
